# corsort

./: .buildinfo  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  usage.html
.doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  readme.doctree  usage.doctree
.doctrees/notebooks/: corsorts.doctree  examples_with_a_chain_and_a_y_shape.doctree  index.doctree  profiles.doctree  rho_delta.doctree  (+1 more)
.github/: ISSUE_TEMPLATE.md
.run/: All tests.run.xml  Generate docs.run.xml
_modules/: index.html
corsort/: CorSort.py  CorSortBorda.py  CorSortDelegate.py  CorSortGainLexi.py  JitSortGeneric.py  Sort.py  SortFordJohnson.py  SortMerge.py  SortQuick.py  __init__.py  chain_and_y.py  consort2.py  cor_sort.py  cor_sort_borda.py  cor_sort_chain_decomposition_merge_x.py  cor_sort_delegate.py  cor_sort_gain.py  cor_sort_gain_lexi.py  corsort.py  corsort_borda.py  corsort_borda_fast.py  corsort_chain_decomposition_merge_v.py  corsort_chain_decomposition_merge_x.py  corsort_delegate.py  corsort_gain_lexi.py  distance_to_sorted_array.py  entropy_bound.py  ford_johnson_sorting.py  jit_scorers.py  jit_sort_generic.py  jit_sorts.py  merge.py  merge_insertion_sort.py  montecarlo.py  multi_merge.py  partition.py  presets.py  quicksort.py  record_comparisons.py  scorers.py  (+19 more)
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: corsorts.html  corsorts.ipynb  examples_with_a_chain_and_a_y_shape.html  examples_with_a_chain_and_a_y_shape.ipynb  index.html  profiles.html  rho_delta.html  termination.html  termination.ipynb
reference/: baie_sort.html  chain_and_y.html  cor_sort.html  cor_sort_borda.html  cor_sort_delegate.html  cor_sort_gain.html  cor_sort_gain_lexi.html  corsort.html  corsort_borda.html  corsort_chain_decomposition_merge_v.html  corsort_chain_decomposition_merge_x.html  corsort_delegate.html  corsort_gain.html  corsort_gain_lexi.html  distance_to_sorted_array.html  entropy_bound.html  index.html  jit_scorers.html  jit_sorts.html  merge.html  montecarlo.html  multi_merge.html  my_class_1.html  my_class_2.html  my_class_3.html  partition.html  presets.html  print_order.html  print_order_as_letters.html  scorers.html  sort.html  sort_asort_quickselect.html  sort_binary_insertion.html  sort_ford_johnson.html  sort_largest_interval.html  sort_merge_bfs.html  sort_merge_bottom_up.html  sort_merge_dfs.html  sort_merge_top_down.html  sort_multizip.html  (+7 more)
sandbox/: A_chain_and_a_Y.ipynb  Example_of_Corsort_execution_LaTeX_code.ipynb  Example_of_Quicksort_and_Asort.ipynb
tests/: __init__.py  test_corsort.py  test_wrap_full_jit.py  test_wrap_sort_scorer.py
(+214 files in other folders)
