[tool.poetry]
name = "corsort"
version = "0.1.2"
description = "Comparison-Oriented Sort."
authors = ["Emma Caizergues <emma.caizergues@gmail.com>"]
license = "GNU General Public License v3"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.10"
networkx = "^3.2.1"
numba = "^0.58.1"
svvamp = "^0.10.0"
multiprocess = "^0.70.15"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
nbsphinx = "^0.9.3"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
